Made code more readable, imrpoved some functionalities

--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="style.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/remarkable/1.7.1/remarkable.min.js" defer></script>
         <script src="index.js" defer></script>
         <link rel="manifest" href="manifest.webmanifest" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
-            rel="stylesheet"
-        />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap"
-            rel="stylesheet"
-        />
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Volkhov&display=swap" rel="stylesheet"> 
+        
         <title> Notes </title>
     </head>
     <body>
@@ -33,7 +28,7 @@
                         <line x1="16" y1="5" x2="19" y2="8" />
                     </svg>
                 </div>
-                <ul></ul>
+                <div id='list'></div>
             </section>
         </main>
 
