--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="style.css" rel="stylesheet" />
         <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"
+            defer
+        ></script>
+        <script
             src="https://cdn.jsdelivr.net/remarkable/1.7.1/remarkable.min.js"
             defer
         ></script>
@@ -41,6 +45,8 @@
                 <line x1="16" y1="5" x2="19" y2="8" />
             </svg>
         </header>
+
+        
 
         <main>
             <section class="note-display">
