Added no encryption option

--- a/index.html
+++ b/index.html
@@ -48,15 +48,27 @@
             </svg>
         </header>
 
-        <form class='password-form'>
-            <h1> Password </h1>
-            <input type='password' class='password-form-input' placeholder="password..."> <br><br>
+        <form class="password-form">
+            <h1>Password</h1>
+            <input
+                type="password"
+                class="password-form-input"
+                placeholder="password..."
+            />
+            <br /><br />
             <button>Enter Password</button>
         </form>
 
-        <form class='password-form2'>
-            <h1> Set your encryption password </h1>
-            <input type='password' class='password-form2-input' placeholder="password..."> <br><br>
+        <form class="password-form2">
+            <h1>Set your encryption password</h1>
+            <input
+                type="password"
+                class="password-form2-input"
+                placeholder="password..."
+            />
+            <br /><br />
+            <input type="checkbox" class="password-form2-checkbox" /> I would
+            prefer to store notes unencrypted <br /><br />
             <button>Generate new password</button>
         </form>
 
