Added remember me option

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 placeholder="password..."
             />
             <br /><br />
+            <input type="checkbox" class="password-form2-checkbox2" checked /> Remember me <br /><br />
             <input type="checkbox" class="password-form2-checkbox" /> I would
             prefer to store notes unencrypted <br /><br />
             <button>Generate new password</button>
