Improved perfomance while editing notes, added sorting options

--- a/index.html
+++ b/index.html
@@ -28,6 +28,32 @@
         <section class="note-index">
             <header>
                 <h1>Notes</h1>
+                <div class="popup">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-arrows-sort"
+                        width="44"
+                        height="44"
+                        viewBox="0 0 24 24"
+                        stroke-width="1.5"
+                        stroke="currentColor"
+                        fill="none"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    >
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M3 9l4 -4l4 4m-4 -4v14" />
+                        <path d="M21 15l-4 4l-4 -4m4 4v-14" />
+                    </svg>
+                    <div class="popuptext">
+                        <p class='sort timestamps-desc'> Last edited </p>
+                        <p class='sort timestamps-asc'> First edited </p>
+                        <p class="sort created-desc"> Last created </p>
+                        <p class="sort created-asc"> First created </p>
+                        <p class="sort title-desc"> By title, descending </p>
+                        <p class="sort title-asc"> By title, ascending </p>
+                    </div>
+                </div>
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="icon icon-tabler icon-tabler-edit"
